# AdSurf

./: .env.example  .gitignore  .mcp.json  AD_SURF_DUPLICATE_AND_STATE_AUDIT.md  AGENTS.md  ASIN_Performance_Profiles.csv  AUDIT_REPORT.md  AdSurf_App_Summary.txt  CONTRIBUTING.md  FINAL_VERIFICATION_REPORT.md  ISSUES_FOUND.txt  Marketing Project Detail Plan.txt  PROJECT_BRIEF.md  README.md  SECURITY.md  Sponsored_Products_Search_term_report (1).xlsx  Sponsored_Products_Search_term_report (2).xlsx  adsurf.db  all_skill_hashes.json  amazon_data_parser.py  api-dev-restart.err  api_logs.txt  api_run.err  asin_performance_profiles.py  bulk-a19yjbemeq5qup-20260511-20260512-1778596309224.xlsx  e2e_state.json  manual-test.mjs  package-lock.json  package.json  playwright.config.ts  skill_registration_debug.json  skills-lock.json  test-20-compliance.mjs  test-agents-upload.mjs  test-deep-inspection.mjs  test-freemodel-models.sh  test-full-workflow.mjs  test-step-by-step.mjs  test_db_fixes.py  test_dual_path_all_agents.py  (+7 more)
apps/api/: adsurf.db-shm  adsurf.db-wal  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: routes.py
apps/api/app/core/: __init__.py  auth.py  config.py  database.py  errors.py  logging_setup.py  observability.py  performance.py  sqlite_init.py
apps/api/app/domain/: __init__.py  monitoring.py  uploads.py
apps/api/app/orchestration/: __init__.py  ads_workflow_graph.py  checkpoints.py  events.py  graph_state.py  nodes.py  router.py  validation.py
apps/api/app/repositories/: __init__.py  account_imports.py  agent_control.py  campaigns.py  (+13 more)
(+555 files in other folders)
